<resources>
    <string name="app_name">Talon</string>
    <string name="app_name_full">Talon for Twitter</string>
    <string name="extension_description">Displays the number of unread tweets, mentions and direct messages as they are updated.</string>
    <string name="menu_refresh">Refresh Timeline</string>
    <string name="menu_compose">New Tweet</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_follow">Follow User</string>
    <string name="menu_unfollow">Un-Follow User</string>
    <string name="menu_tweet">Send Tweet</string>
    <string name="menu_dm">Send Direct Message</string>
    <string name="menu_block">Block User</string>
    <string name="menu_unblock">Unblock User</string>
    <string name="menu_add_to_list">Add to List</string>
    <string name="menu_change_picture">Change Profile Picture</string>
    <string name="menu_change_bio">Change Profile Info</string>
    <string name="menu_change_banner">Change Profile Banner</string>
    <string name="menu_direct_message">New Direct Message</string>
    <string name="menu_save_image">Save Image</string>
    <string name="menu_favorite">Favorite User</string>
    <string name="menu_unfavorite">Un-Favorite User</string>
    <string name="menu_create_list">Create New List</string>
    <string name="menu_spam">Mark as Spam</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">a minute ago</string>
    <string name="minutes_ago">%s minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">%s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%s days ago</string>
    <string name="mute">Mute</string>
    <string name="unmute">Un-Mute</string>
    <string name="muted_users">Muted Users</string>
    <string name="no_users">No Users</string>
    <string name="links">Links</string>
    <string name="pictures">Pictures</string>
    <string name="timeline">Timeline</string>
    <string name="mentions">Mentions</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="retweets">Retweets</string>
    <string name="favorite_tweets">Favorite Tweets</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="trends">Trending</string>
    <string name="local_trends">Local Trends</string>
    <string name="world_trends">World Trends</string>
    <string name="search">Search</string>
    <string name="lists">Lists</string>
    <string name="search_hint">Search...</string>
    <string name="new_tweet">new tweet</string>
    <string name="new_tweets">new tweets</string>
    <string name="no_new_tweets">No new tweets</string>
    <string name="new_mention">new mention</string>
    <string name="new_mentions">new mentions</string>
    <string name="no_new_mentions">No new mentions</string>
    <string name="new_direct_message">new direct message</string>
    <string name="new_direct_messages">new direct messages</string>
    <string name="no_new_direct_messages">No new direct messages</string>
    <string name="tap_to_setup">Tap to setup</string>
    <string name="new_account">New Account</string>
    <string name="from_top">from top</string>
    <string name="jump_to_top">To First</string>
    <string name="all_read">All Read!</string>
    <string name="view_new">Load?</string>
    <string name="old_interactions">All Interactions</string>
    <string name="tweet">Tweet</string>
    <string name="tweets">Tweets</string>
    <string name="mention">Mention</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="new_message">new message</string>
    <string name="new_messages">new messages</string>
    <string name="mentioned_by">Mentioned by</string>
    <string name="message_from">Message from</string>
    <string name="mark_read">Read</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="optional_name">Name (Optional)</string>
    <string name="optional_url">URL (Optional)</string>
    <string name="optional_location">Location (Optional)</string>
    <string name="optional_description">Description (Optional)</string>
    <string name="menu_open_web">Open Web Link</string>
    <string name="menu_copy_text">Copy Tweet Text</string>
    <string name="menu_share">Share Tweet</string>
    <string name="menu_delete_tweet">Delete Tweet</string>
    <string name="menu_quote">Quote Tweet</string>
    <string name="list_name">List name...</string>
    <string name="list_description">Optional list description...</string>
    <string name="sPrivate">Private</string>
    <string name="sPublic">Public</string>
        <string name="theme_options">Theme Options</string>
        <string name="font_options">Font Options</string>
        <string name="other_options">Other Options</string>
        <string name="theme">Theme</string>
        <string name="addon_themes">Add-on Themes</string>
        <string name="addon_note">Click here to find new themes.\n\nNOTES:\n- This will disable the use of the built-in emoji keyboard when replying to a tweet.\n- Please do not report bugs unless you can confirm them WITHOUT a custom theme applied.</string>
        <string name="use_addon_themes">Use Add-On Theme</string>
        <string name="make_a_theme">Make a Theme</string>
        <string name="layout">Layout</string>
    <string name="layout_summary">Changing this will clear the app\'s cache.</string>
        <string name="text_size">Text Size</string>
        <string name="night_mode">Night Mode</string>
        <string name="ui_extras">UI Extras</string>
            <string name="ui_extras_summary">Includes:\n
                - Hiding Action Bar\n
                - Actionable Toast Bar\n
                - Transparent System Bars (Android 4.4 only)\n\n
                Enabling this setting will affect scrolling performance.</string>
        <string name="inline_pics">Display In-Line Pictures</string>
        <string name="use_screen_name">Display Twitter Handle</string>
            <string name="use_screen_name_summary">Display the user\'s Twitter handle instead of their name on timelines.</string>
        <string name="timestamp">24-Hour Timestamp</string>
        <string name="sync_mobile_data">Use Mobile Data</string>
        <string name="sync_mobile_data_summary">Auto-refresh timelines over both mobile data and WiFi.</string>
        <string name="auto_sync_notifications">Auto-Refresh Notification Options</string>
            <string name="notifications">Notifications</string>
            <string name="vibrate">Vibrate</string>
            <string name="led">Flash LED</string>
            <string name="wake_screen">Wake Screen</string>
            <string name="quiet_hours">Do Not Disturb</string>
        <string name="max_number_on_refresh">Max Tweets to Refresh</string>
        <string name="fav_users_notifications">Favorite User Notifications</string>
        <string name="sync_second_mentions">Sync Second Acc. Mentions</string>
            <string name="sync_second_mentions_summary">Automatically check and notify for new mentions on your second account along with the first.</string>
        <string name="max_number_summary">Higher max means a slower refresh.</string>
        <string name="auto_refresh_category">Auto-Refresh Options</string>
            <string name="refresh_on_startup">Refresh on Startup</string>
            <string name="timeline_sync_interval">Timeline Refresh Rate</string>
            <string name="mentions_sync_interval">Mentions Refresh Rate</string>
            <string name="dm_sync_interval">Direct Messages Refresh Rate</string>
        <string name="sync_friends">Sync Friends Data</string>
        <string name="sync_friends_summary2">Re-sync friends data to use when composing tweets.</string>
        <string name="push_notification_options">\"Push Notification\" Options</string>
        <string name="push_notifications">Talon Pull</string>
            <string name="push_notifications_summary">This will start a listener to post notifications as you receive new interactions (mentions, dm\'s, favorites, retweets, or new followers).</string>
            <string name="push_notification_warning">To read more about this option, click this preference.</string>
        <string name="app_feel_category">App Feel Options</string>
            <string name="advance_windowed">Advance Windowed</string>
                <string name="advance_windowed_summary">Open profiles and tweets in a \"windowed\" view above the timelines.</string>
            <string name="reverse_click_actions">Reverse Click Actions</string>
                <string name="reverse_click_actions_summary">Reverse the click actions on tweets.\n\n
                    Default (when disabled):\n
                    - Long click to open tweet\n
                    - Short click to expand tweet</string>
            <string name="delete_cache">Delete Cache Now</string>
        <string name="backup_category">Backup and Restore Options</string>
            <string name="backup_settings">Backup Settings</string>
            <string name="restore_settings">Restore Settings</string>
        <string name="rerun_tutorial">Run Startup Tutorial</string>
        <string name="faq">Frequently Asked Questions</string>
        <string name="youtube">YouTube Video</string>
        <string name="google_plus">Google+ Community</string>
        <string name="xda_thread">XDA Thread</string>
        <string name="email_me">Email Me</string>
        <string name="tweet_me">Tweet at Me</string>
        <string name="follow_talon">Follow Talon on Twitter</string>
        <string name="credits">Credits</string>
    <string name="use_inapp_browser">In-App Browser on Timeline</string>
    <string name="use_browser_on_tweet">Browser Page on Tweet</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="handle_and_name">Display Handle and Name</string>
    <string name="absolute_date">Use Absolute Dates</string>
    <string name="compose_with_search">Compose Tweet with Search</string>
    <string name="use_toast">Use \"To First\" Toast</string>
    <string name="ignore_retweets">Ignore Retweets</string>
    <string name="ignore_retweets_summary">Do not display any retweets while scrolling your main timelines.</string>
    <string name="muted_hashtags">Muted Hashtags</string>
    <string name="muted_hashtags_summary">Click hashtag to remove the mute.</string>
    <string name="font_type">Font Type</string>
    <string name="tweet_look_options">Tweet Look Options</string>
    <string name="limiting_options">Limiting Options</string>
    <string name="configure_pages">Configure Extra Pages</string>
    <string name="download_portal">Download Theme Portal App</string>
    <string name="download_portal_summary">This is the Klinker Apps \"Portal\" app to stay up to date with the latest news as well as find all the best themes for Talon and EvolveSMS in one place!</string>
    <string name="menu_save_search">Save Search</string>
    <string name="menu_apply_picture_filter">Apply Picture Filter</string>
    <string name="menu_remove_rt">Remove Retweets</string>
    <string name="mute_expression">Mute Expression</string>
    <string name="view_muted_expressions">Remove Muted Expressions</string>
    <string name="regex_disclaimer">Muting too many expressions may affect startup and refresh times.</string>
    <string name="plain_text_browser">Plain Text Browser</string>
    <string name="plain_text_summary">Remove images and formatting from the web browser and just show the text on a web page.</string>
    <string name="plain_text_on_data">Plain Text on Mobile Data</string>
    <string name="plain_text_on_data_summary">Enable the plain text browser only when on a mobile data connection, not over WiFi.</string>
</resources>