<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/theme_options" >

        <ListPreference
            android:key="layout"
            android:title="@string/layout"
            android:summary="@string/layout_summary"
            android:defaultValue="0"
            android:entries="@array/choose_layout"
            android:entryValues="@array/choose_layout_inserted"
            />

        <ListPreference
            android:key="theme"
            android:title="@string/theme"
            android:defaultValue="1"
            android:entries="@array/choose_theme"
            android:entryValues="@array/choose_theme_inserted"
            />

        <CheckBoxPreference
            android:key="night_mode"
            android:title="@string/night_mode"
            android:defaultValue="false"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/font_options" >

        <ListPreference
            android:key="text_size"
            android:title="@string/text_size"
            android:defaultValue="14"
            android:entries="@array/text_size"
            android:entryValues="@array/text_size"
            />

        <ListPreference
            android:key="font_type"
            android:title="@string/font_type"
            android:defaultValue="1"
            android:entries="@array/font_type"
            android:entryValues="@array/font_type_inserted"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/addon_themes" >


        <Preference
            android:key="addon_themes"
            android:title="@string/use_addon_themes"
            android:defaultValue="@null"
            />

        <Preference
            android:title="@string/make_a_theme" >
            <intent android:action="android.intent.action.VIEW"
                android:data="https://github.com/klinker24/talon_theme" />
        </Preference>

        <Preference
            android:key="download_portal"
            android:title="@string/download_portal"
            android:summary="@string/download_portal_summary" >
        </Preference>

        <Preference
            android:summary="@string/addon_note">
            <intent android:action="android.intent.action.VIEW"
                android:data="https://plus.google.com/u/0/communities/112468199526946242218/stream/c2f77fd2-23f2-4cb5-923e-6bb748fbcb69" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_options" >

        <CheckBoxPreference
            android:key="ui_extras"
            android:title="@string/ui_extras"
            android:summary="@string/ui_extras_summary"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            android:key="use_toast"
            android:title="@string/use_toast"
            android:defaultValue="true"
            android:dependency="ui_extras"
            />

        </PreferenceCategory>

</PreferenceScreen>