<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="app_feel_category"
        android:title="@string/app_feel_category" >

        <CheckBoxPreference
            android:key="advance_windowed"
            android:title="@string/advance_windowed"
            android:summary="@string/advance_windowed_summary"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            android:key="reverse_click_option"
            android:title="@string/reverse_click_actions"
            android:summary="@string/reverse_click_actions_summary"
            android:defaultValue="true"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="backup_category"
        android:title="@string/backup_category">

        <Preference
            android:key="backup"
            android:title="@string/backup_settings"
            />

        <Preference
            android:key="restore"
            android:title="@string/restore_settings"
            />

        <Preference
            android:key="delete_cache"
            android:title="@string/delete_cache"
            />

    </PreferenceCategory>

</PreferenceScreen>