<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="auto_refresh_category"
        android:title="@string/auto_refresh_category" >

        <CheckBoxPreference
            android:key="sync_mobile_data"
            android:title="@string/sync_mobile_data"
            android:summary="@string/sync_mobile_data_summary"
            android:defaultValue="true"
            />

        <!-- Default of 30 mins -->
        <ListPreference
            android:key="timeline_sync_interval"
            android:title="@string/timeline_sync_interval"
            android:defaultValue="1800000"
            android:entries="@array/sync_interval"
            android:entryValues="@array/sync_interval_inserted"
            />

        <!-- Default of 30 mins -->
        <ListPreference
            android:key="mentions_sync_interval"
            android:title="@string/mentions_sync_interval"
            android:defaultValue="1800000"
            android:entries="@array/sync_interval"
            android:entryValues="@array/sync_interval_inserted"
            />

        <!-- Default of 30 mins -->
        <ListPreference
            android:key="dm_sync_interval"
            android:title="@string/dm_sync_interval"
            android:defaultValue="1800000"
            android:entries="@array/sync_interval"
            android:entryValues="@array/sync_interval_inserted"
            />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="other_options"
        android:title="@string/other_options" >

        <CheckBoxPreference
            android:key="sync_second_mentions"
            android:title="@string/sync_second_mentions"
            android:summary="@string/sync_second_mentions_summary"
            android:defaultValue="true"
            />

        <CheckBoxPreference
            android:key="refresh_on_start"
            android:title="@string/refresh_on_startup"
            android:defaultValue="true"
            />

        <ListPreference
            android:key="max_tweets"
            android:title="@string/max_number_on_refresh"
            android:summary="@string/max_number_summary"
            android:defaultValue="1"
            android:entries="@array/max_number"
            android:entryValues="@array/max_number_inserted"
            />

        <Preference
            android:key="sync_friends"
            android:title="@string/sync_friends"
            android:summary="@string/sync_friends_summary2"
            />

        </PreferenceCategory>


</PreferenceScreen>