<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_share"
        android:orderInCategory="1"
        android:title="@string/menu_share"
        android:icon="?shareButton"
        android:showAsAction="always"
        android:actionProviderClass="android.widget.ShareActionProvider"/>

    <item android:id="@+id/menu_delete_tweet"
          android:orderInCategory="2"
          android:title="@string/menu_delete_tweet"
          android:showAsAction="never"  />

    <item android:id="@+id/menu_quote"
          android:orderInCategory="3"
          android:title="@string/menu_quote"
          android:showAsAction="never" />

    <item android:id="@+id/menu_copy_text"
          android:orderInCategory="4"
          android:title="@string/menu_copy_text"
          android:showAsAction="never"  />

    <item android:id="@+id/menu_open_web"
          android:orderInCategory="5"
          android:title="@string/menu_open_web"
          android:showAsAction="never"  />

    <item android:id="@+id/menu_save_image"
          android:orderInCategory="6"
          android:title="@string/menu_save_image"
          android:showAsAction="never"  />

    <item android:id="@+id/menu_spam"
          android:title="@string/menu_spam"
          android:orderInCategory="7"
          android:showAsAction="never" />

</menu>