<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="inapp_browser"
        android:title="@string/use_inapp_browser"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="inapp_browser_tweet"
        android:title="@string/use_browser_on_tweet"
        android:defaultValue="true"
        />

    <CheckBoxPreference
        android:key="mobilized_browser"
        android:title="@string/plain_text_browser"
        android:summary="@string/plain_text_summary"
        android:defaultValue="false"
        />

    <CheckBoxPreference
        android:key="mobilize_on_data_only"
        android:title="@string/plain_text_on_data"
        android:summary="@string/plain_text_on_data_summary"
        android:defaultValue="true"
        android:dependency="mobilized_browser"
        />

    <!--<CheckBoxPreference
        android:key="open_to_web"
        android:title="@string/open_to_web"
        android:summary="@string/open_to_web_summary"
        android:defaultValue="true"
        android:dependency="inapp_browser_tweet"
        />-->
</PreferenceScreen>