<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_dismiss"
        android:orderInCategory="1"
        android:title="@string/dismiss_all"
        android:showAsAction="always"
        android:icon="?cancelButton"/>

    <item android:id="@+id/menu_search"
        android:orderInCategory="2"
        android:title="@string/search"
        android:showAsAction="always"
        android:icon="?searchIcon"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/menu_compose"
          android:orderInCategory="3"
          android:title="@string/menu_compose"
          android:showAsAction="always"
          android:icon="?sendButton" />

    <item android:id="@+id/menu_direct_message"
          android:orderInCategory="4"
          android:title="@string/menu_direct_message"
          android:showAsAction="never" />

    <item android:id="@+id/menu_settings"
          android:orderInCategory="5"
          android:title="@string/menu_settings"
          android:showAsAction="never" />

</menu>