<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.klinker.android.twitter.ui.widgets.HoloEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional_name"
        android:id="@+id/name"/>

    <com.klinker.android.twitter.ui.widgets.HoloEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional_url"
        android:id="@+id/url"/>

    <com.klinker.android.twitter.ui.widgets.HoloEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional_location"
        android:id="@+id/location"/>

    <com.klinker.android.twitter.ui.widgets.HoloEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/optional_description"
        android:id="@+id/description"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button"
            android:contentDescription="@string/cancel"
            android:text="@string/cancel"
            android:id="@+id/cancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button"
            android:contentDescription="@string/update"
            android:text="@string/update"
            android:id="@+id/change"/>

    </LinearLayout>

</LinearLayout>