<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <com.klinker.android.talon.ui.widgets.HoloEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_name"
        android:id="@+id/name"/>
    
    <com.klinker.android.talon.ui.widgets.HoloEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/list_description"
        android:id="@+id/description"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button"
            android:text="@string/cancel"
            android:id="@+id/cancel"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button"
            android:text="@string/sPrivate"
            android:id="@+id/private_btn"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button"
            android:text="@string/sPublic"
            android:id="@+id/public_btn"/>
    </LinearLayout>

</LinearLayout>